# wolf

./: CMakeLists.txt
.github/workflows/: build-docs.yml  clang-format.yml  docker-build.yml  linux-build-test.yml
.mentat/: format.sh  setup.sh
docker/: gpu-drivers.Dockerfile  gstreamer.Dockerfile  startup.sh  wolf.Dockerfile
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: faq.adoc
docs/modules/dev/pages/: api.adoc
docs/modules/dev/partials/: spec.json
docs/modules/user/pages/: quickstart.adoc
src/core/: CMakeLists.txt
src/core/src/core/: gstreamer.hpp  virtual-display.hpp
src/moonlight-protocol/: moonlight.cpp
src/moonlight-protocol/moonlight/: data-structures.hpp  protocol.hpp
src/moonlight-server/: CMakeLists.txt  wolf.cpp
src/moonlight-server/api/: api.hpp  endpoints.cpp  unix_socket_server.cpp
src/moonlight-server/control/: control.cpp
src/moonlight-server/events/: events.hpp  reflectors.hpp
src/moonlight-server/rest/: custom-https.cpp  endpoints.hpp  servers.cpp
src/moonlight-server/rtp/: udp-ping.cpp  udp-ping.hpp
src/moonlight-server/rtsp/: commands.hpp  net.hpp
src/moonlight-server/runners/: child_session.cpp  docker.cpp  process.cpp
src/moonlight-server/state/: config.hpp  configTOML.cpp  data-structures.hpp  serialised_config.hpp  sessions.hpp
src/moonlight-server/state/default/: config.include.toml  config.v4.toml  config.v5.toml
src/moonlight-server/streaming/: streaming.cpp  streaming.hpp
tests/: CMakeLists.txt  testMoonlight.cpp  testRTSP.cpp  testWolfAPI.cpp
tests/assets/: config.test.toml
